Fix: delete info

--- a/index.html
+++ b/index.html
@@ -646,7 +646,7 @@
                         <p>
                             I am currently here working on various aspects of development and leadership.
                             I started my frontend carrier here.
-                            Nowadays I am working with several different programming languages, both frontend and backend.
+                            Nowadays I am working with several different programming languages.
                         </p>
                         <a href="#" class="modal-dot" data-toggle="modal" data-target="#myModal-FrontEndDevelop">
                             <i class="fa fa-ellipsis-h" aria-hidden="true"></i>
