--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
                 <div class="modal-header  text-center">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true"><i class="fa fa-close"></i></span></button>
-                    <h4 class="modal-title" id="myModalLabel-5">EXPERIENCE AT M</h4>
+                    <h4 class="modal-title" id="myModalLabel-5">EXPERIENCE IN ONLINE COURSES</h4>
                     <h6>
                         <small></small>
                     </h6>
